@@ -10,8 +10,7 @@ import org.jspecify.annotations.Nullable;
 import java.awt.*;
 import java.awt.image.BufferedImage;
 import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 
 import static java.net.HttpURLConnection.HTTP_OK;
 
@@ -41,8 +40,8 @@ public final class IconHorseSupplier implements FaviconSupplier {
         return NO_FAVICON;
     }
 
-    private static URL getFaviconRequest(FaviconRef ref) throws MalformedURLException {
-        return new URL("https://icon.horse/icon/" + ref.getDomain());
+    private static URI getFaviconRequest(FaviconRef ref) {
+        return URI.create("https://icon.horse/icon/" + ref.getDomain());
     }
 
     private static boolean isDefaultFavicon(@Nullable String contentType, @Nullable BufferedImage image) {
